--- a/portefolio/css/mixin.scss
+++ b/portefolio/css/mixin.scss
@@ -4,6 +4,8 @@
 ================================================== */
 $color-white:#fff;
 $color-blue:#22afcd;
+$color-brown: #681313;
+$color-grey: #f3f3f3;
 
 
 
@@ -11,7 +13,7 @@ $color-blue:#22afcd;
     round button 
 ================================================== */
 
-@raduis-button($width, $height) {
+@mixin raduis-button($width, $height) {
     $width    : false !default;
     $height  : false !default;
 	@if $width {
