--- a/portefolio/css/animation.scss
+++ b/portefolio/css/animation.scss
@@ -10,7 +10,7 @@
 			@include position-absolute("0","0", false, false,"10");
 		}
 		100%{
-			@include position-absolute("0","300px", false, false,"10");
+			@include position-absolute("0","200px", false, false,"10");
 	 	}
 	 } 
 	@-moz-keyframes menu-move {
@@ -18,7 +18,7 @@
 			@include position-absolute("0","0", false, false,"10");
 		}
 		100%{
-			@include position-absolute("0","300px", false, false,"10");
+			@include position-absolute("0","200px", false, false,"10");
 	 	}
 	 } 
 	@-o-keyframes menu-move{ 
@@ -26,7 +26,7 @@
 			@include position-absolute("0","0", false, false,"10");
 		}
 		100%{
-			@include position-absolute("0","300px", false, false,"10");
+			@include position-absolute("0","200px", false, false,"10");
 	 	}
 	 }
 	@keyframes menu-move{ 
@@ -34,7 +34,7 @@
 			@include position-absolute("0","0", false, false,"10");
 		}
 		100%{
-			@include position-absolute("0","300px", false, false,"10");
+			@include position-absolute("0","200px", false, false,"10");
 	 	}
 	} 
 
@@ -47,7 +47,7 @@
 			@include position-absolute("-5px","-4px", false, false,"2");
 		}
 		100%{
-			@include position-absolute("-5px","296px", false, false,"2");
+			@include position-absolute("-5px","196px", false, false,"2");
 	 	}
 	 } 
 	@-moz-keyframes menu-move-back {
@@ -55,7 +55,7 @@
 			@include position-absolute("-5px","-4px", false, false,"2");
 		}
 		100%{
-			@include position-absolute("-5px","296px", false, false,"2");
+			@include position-absolute("-5px","196px", false, false,"2");
 	 	}
 	 } 
 	@-o-keyframes menu-move-back{ 
@@ -63,7 +63,7 @@
 			@include position-absolute("-5px","-4px", false, false,"2")
 		}
 		100%{
-			@include position-absolute("-5px","296px", false, false,"2");
+			@include position-absolute("-5px","196px", false, false,"2");
 	 	}
 	 }
 	@keyframes menu-move-back{ 
@@ -71,7 +71,7 @@
 			@include position-absolute("-5px","-4px", false, false,"2")
 		}
 		100%{
-			@include position-absolute("-5px","296px", false, false,"2");
+			@include position-absolute("-5px","196px", false, false,"2");
 	 	}
 	} 
 
@@ -85,7 +85,7 @@
 			@include position-absolute("9px","10px", false, false,"3");
 		}
 		100%{
-			@include position-absolute("9px","280px", false, false,"3");
+			@include position-absolute("9px","180px", false, false,"3");
 	 	}
 	 } 
 	@-moz-keyframes menu-move-arrow {
@@ -93,7 +93,7 @@
 			@include position-absolute("9px","10px", false, false,"3");
 		}
 		100%{
-			@include position-absolute("9px","280px", false, false,"3");
+			@include position-absolute("9px","180px", false, false,"3");
 	 	}
 	 } 
 	@-o-keyframes menu-move-arrow{ 
@@ -101,7 +101,7 @@
 			@include position-absolute("9px","10px", false, false,"3");
 		}
 		100%{
-			@include position-absolute("9px","280px", false, false,"3");
+			@include position-absolute("9px","180px", false, false,"3");
 	 	}
 	 }
 	@keyframes menu-move-arrow{ 
@@ -109,6 +109,48 @@
 			@include position-absolute("9px","10px", false, false,"3");
 		}
 		100%{
-			@include position-absolute("9px","280px", false, false,"3");
+			@include position-absolute("9px","180px", false, false,"3");
 	 	}
 	} 
+
+
+/* ==================================================
+    animation button menu-move-background
+================================================== */
+
+@-webkit-keyframes menu-move-background {
+		0%{ 
+			width: 0;
+		}
+		100%{
+			width: 200px;
+	 	}
+	 } 
+	@-moz-keyframes menu-move-background {
+		0%{ 
+			width: 0;
+		}
+		100%{
+			width: 200px;
+	 	}
+	 } 
+	@-o-keyframes menu-move-background{ 
+		0%{ 
+			width: 0;
+		}
+		100%{
+			width: 200px;
+	 	}
+	 }
+	@keyframes menu-move-background{ 
+		0%{ 
+			width: 0;
+		}
+		100%{
+			width: 200px;
+	 	}
+	} 
+
+
+
+
