--- a/portefolio/css/style.css
+++ b/portefolio/css/style.css
@@ -55,6 +55,53 @@
     right: 200px;
     z-index: 10; } }
 /* ==================================================
+    animation button menu-move-init
+================================================== */
+@-webkit-keyframes menu-move-init {
+  0% {
+    position: absolute;
+    top: 0;
+    right: 200px;
+    z-index: 10; }
+  100% {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10; } }
+@-moz-keyframes menu-move-init {
+  0% {
+    position: absolute;
+    top: 0;
+    right: 200px;
+    z-index: 10; }
+  100% {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10; } }
+@-o-keyframes menu-move-init {
+  0% {
+    position: absolute;
+    top: 0;
+    right: 200px;
+    z-index: 10; }
+  100% {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10; } }
+@keyframes menu-move-init {
+  0% {
+    position: absolute;
+    top: 0;
+    right: 200px;
+    z-index: 10; }
+  100% {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10; } }
+/* ==================================================
     animation button menu-move-back
 ================================================== */
 @-webkit-keyframes menu-move-back {
@@ -102,6 +149,53 @@
     right: 196px;
     z-index: 2; } }
 /* ==================================================
+    animation button menu-move-back-init
+================================================== */
+@-webkit-keyframes menu-move-back-init {
+  0% {
+    position: absolute;
+    top: -5px;
+    right: 196px;
+    z-index: 2; }
+  100% {
+    position: absolute;
+    top: -5px;
+    right: -4px;
+    z-index: 2; } }
+@-moz-keyframes menu-move-back-init {
+  0% {
+    position: absolute;
+    top: -5px;
+    right: 196px;
+    z-index: 2; }
+  100% {
+    position: absolute;
+    top: -5px;
+    right: -4px;
+    z-index: 2; } }
+@-o-keyframes menu-move-back-init {
+  0% {
+    position: absolute;
+    top: -5px;
+    right: 196px;
+    z-index: 2; }
+  100% {
+    position: absolute;
+    top: -5px;
+    right: -4px;
+    z-index: 2; } }
+@keyframes menu-move-back-init {
+  0% {
+    position: absolute;
+    top: -5px;
+    right: 196px;
+    z-index: 2; }
+  100% {
+    position: absolute;
+    top: -5px;
+    right: -4px;
+    z-index: 2; } }
+/* ==================================================
     animation button menu-move-arrow
 ================================================== */
 @-webkit-keyframes menu-move-arrow {
@@ -147,6 +241,53 @@
     position: absolute;
     top: 9px;
     right: 180px;
+    z-index: 3; } }
+/* ==================================================
+    animation button menu-move-arrow-init
+================================================== */
+@-webkit-keyframes menu-move-arrow-init {
+  0% {
+    position: absolute;
+    top: 9px;
+    right: 180px;
+    z-index: 3; }
+  100% {
+    position: absolute;
+    top: 9px;
+    right: 10px;
+    z-index: 3; } }
+@-moz-keyframes menu-move-arrow-init {
+  0% {
+    position: absolute;
+    top: 9px;
+    right: 180px;
+    z-index: 3; }
+  100% {
+    position: absolute;
+    top: 9px;
+    right: 10px;
+    z-index: 3; } }
+@-o-keyframes menu-move-arrow-init {
+  0% {
+    position: absolute;
+    top: 9px;
+    right: 180px;
+    z-index: 3; }
+  100% {
+    position: absolute;
+    top: 9px;
+    right: 10px;
+    z-index: 3; } }
+@keyframes menu-move-arrow-init {
+  0% {
+    position: absolute;
+    top: 9px;
+    right: 180px;
+    z-index: 3; }
+  100% {
+    position: absolute;
+    top: 9px;
+    right: 10px;
     z-index: 3; } }
 /* ==================================================
     animation button menu-move-background
@@ -236,18 +377,32 @@ body {
       right: -4px;
       z-index: 2;
       background: #681313; }
-    body .menu-emplacement:hover .menu-icon {
+    body .menu-emplacement.animation-up .menu-icon {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 10;
       background-position: 0 -81px;
-      animation: menu-move 2s;
+      animation: menu-move 1s;
       animation-fill-mode: forwards; }
-    body .menu-emplacement:hover .arrow.menu {
-      animation: menu-move-arrow 2s;
+    body .menu-emplacement.animation-down .menu-icon {
+      background-position: 0 0;
+      animation: menu-move-init 1s;
       animation-fill-mode: forwards; }
-    body .menu-emplacement:hover .round-circle {
-      animation: menu-move-back 2s;
+    body .menu-emplacement.animation-up .arrow.menu {
+      animation: menu-move-arrow 1s;
       animation-fill-mode: forwards; }
-    body .menu-emplacement:hover .background-effect-rectangle {
-      animation: menu-move-background 2s;
+    body .menu-emplacement.animation-down .arrow.menu {
+      animation: menu-move-arrow-init 1s;
+      animation-fill-mode: forwards; }
+    body .menu-emplacement.animation-up .round-circle {
+      animation: menu-move-back 1s;
+      animation-fill-mode: forwards; }
+    body .menu-emplacement.animation-down .round-circle {
+      animation: menu-move-back-init 1s;
+      animation-fill-mode: forwards; }
+    body .menu-emplacement.animation-up .background-effect-rectangle {
+      animation: menu-move-background 1s;
       animation-fill-mode: forwards; }
 
 /*# sourceMappingURL=style.css.map */
