menu only css in hover

--- a/portefolio/css/mixin.css
+++ b/portefolio/css/mixin.css
@@ -4,5 +4,8 @@
 /* ==================================================
     round button 
 ================================================== */
+/* ==================================================
+    animation delay 
+================================================== */
 
 /*# sourceMappingURL=mixin.css.map */
