--- a/portefolio/css/style.css
+++ b/portefolio/css/style.css
@@ -24,14 +24,23 @@ body {
     position: fixed;
     top: 20px;
     right: 20px;
-    height: 80px; }
+    height: 88px;
+    width: 88px;
+    -webkit-transition: width 1s;
+    -moz-transition: width 1s;
+    -o-transition: width 1s;
+    transition: width 1s; }
     body .menu-emplacement:hover {
       cursor: pointer;
-      width: 200px; }
+      width: 288px;
+      -webkit-transition: width 1s;
+      -moz-transition: width 1s;
+      -o-transition: width 1s;
+      transition: width 1s; }
     body .menu-emplacement .menu-icon {
       position: absolute;
-      top: 0;
-      right: 0;
+      top: 4px;
+      right: 4px;
       z-index: 10;
       width: 80px;
       height: 80px;
@@ -44,9 +53,9 @@ body {
       transition: transform 1s; }
     body .menu-emplacement .arrow.menu {
       position: absolute;
-      top: 8px;
+      top: 12px;
       right: 10px;
-      z-index: 1;
+      z-index: 8;
       content: '';
       width: 0;
       height: 0;
@@ -57,13 +66,34 @@ body {
       -moz-transition: transform 1s;
       -o-transition: transform 1s;
       transition: transform 1s; }
+    body .menu-emplacement .text-wrapper {
+      width: 0px;
+      height: 88px;
+      overflow: hidden;
+      -webkit-transition: width 1s;
+      -moz-transition: width 1s;
+      -o-transition: width 1s;
+      transition: width 1s;
+      position: fixed;
+      top: 20px;
+      right: 20px; }
+    body .menu-emplacement .text-menu {
+      position: absolute;
+      top: 10px;
+      right: 300px;
+      z-index: 6;
+      width: 180px;
+      -webkit-transition: transform 2s;
+      -moz-transition: transform 2s;
+      -o-transition: transform 2s;
+      transition: transform 2s; }
     body .menu-emplacement .background-effect-circle {
       width: 88px;
       height: 88px;
       border-radius: 50%;
       position: absolute;
-      top: -5px;
-      right: -4px;
+      top: 0;
+      right: 0;
       z-index: 0;
       background: #f3f3f3;
       -webkit-transition: transform 1s;
@@ -72,7 +102,7 @@ body {
       transition: transform 1s; }
     body .menu-emplacement .background-effect-rectangle {
       position: absolute;
-      top: -5px;
+      top: 0px;
       right: 37px;
       z-index: -1;
       background: #f3f3f3;
@@ -88,9 +118,9 @@ body {
       height: 88px;
       border-radius: 50%;
       position: absolute;
-      top: -5px;
-      right: -4px;
-      z-index: 2;
+      top: 0;
+      right: 0;
+      z-index: 9;
       background: #681313;
       -webkit-transition: transform 1s;
       -moz-transition: transform 1s;
@@ -108,7 +138,19 @@ body {
       -moz-transition: transform 1s;
       -o-transition: transform 1s;
       transition: transform 1s;
-      transform: translate(-170px, 0px); }
+      transform: translate(-175px, 0px); }
+    body .menu-emplacement:hover .text-wrapper {
+      width: 243px;
+      -webkit-transition: width 1s;
+      -moz-transition: width 1s;
+      -o-transition: width 1s;
+      transition: width 1s; }
+    body .menu-emplacement:hover .text-menu {
+      -webkit-transition: transform 2s;
+      -moz-transition: transform 2s;
+      -o-transition: transform 2s;
+      transition: transform 2s;
+      transform: translate(300px, 0px); }
     body .menu-emplacement:hover .round-circle {
       -webkit-transition: transform 1s;
       -moz-transition: transform 1s;
