--- a/portefolio/css/style.css
+++ b/portefolio/css/style.css
@@ -222,8 +222,14 @@ body {
     top: 0px;
     right: 0px;
     height: 100%;
-    width: 30%;
+    width: 35%;
     z-index: -1;
     display: none; }
+    body .overlay.menu .overlay-content {
+      margin-top: 160px; }
+      body .overlay.menu .overlay-content a {
+        display: block;
+        text-decoration: none;
+        color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
