--- a/portefolio/css/style.css
+++ b/portefolio/css/style.css
@@ -38,18 +38,18 @@ body {
     right: 20px;
     height: 88px;
     width: 88px;
-    -webkit-transition: width 1s;
-    -moz-transition: width 1s;
-    -o-transition: width 1s;
-    transition: width 1s;
+    -webkit-transition: width 0.8s;
+    -moz-transition: width 0.8s;
+    -o-transition: width 0.8s;
+    transition: width 0.8s;
     z-index: 1; }
     body .menu-emplacement:hover {
       cursor: pointer;
       width: 288px;
-      -webkit-transition: width 1s;
-      -moz-transition: width 1s;
-      -o-transition: width 1s;
-      transition: width 1s; }
+      -webkit-transition: width 0.8s;
+      -moz-transition: width 0.8s;
+      -o-transition: width 0.8s;
+      transition: width 0.8s; }
     body .menu-emplacement .menu-icon {
       position: absolute;
       top: 4px;
@@ -59,81 +59,48 @@ body {
       height: 80px;
       display: block;
       background: url("../img/icon-vache-menu.png");
-      background-repeat: no-repeat;
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s; }
+      background-repeat: no-repeat; }
     body .menu-emplacement .arrow.menu {
       position: absolute;
       top: 14px;
-      right: 10px;
+      right: 50px;
       z-index: 8;
       content: '';
       width: 0;
       height: 0;
-      border-left: 28px solid #681313;
+      border-right: 28px solid #681313;
       border-bottom: 30px solid transparent;
       border-top: 30px solid transparent;
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s; }
+      -webkit-transition: transform 0.8s;
+      -moz-transition: transform 0.8s;
+      -o-transition: transform 0.8s;
+      transition: transform 0.8s; }
     body .menu-emplacement .text-wrapper {
       width: 0px;
       height: 88px;
       overflow: hidden;
-      -webkit-transition: width 1s;
-      -moz-transition: width 1s;
-      -o-transition: width 1s;
-      transition: width 1s;
+      -webkit-transition: width 0.8s;
+      -moz-transition: width 0.8s;
+      -o-transition: width 0.8s;
+      transition: width 0.8s;
       position: fixed;
       top: 20px;
-      right: 20px; }
+      right: 40px; }
     body .menu-emplacement .text-menu {
       position: absolute;
-      top: 0px;
-      right: 300px;
+      top: -35px;
+      right: -10px;
       z-index: 6;
       width: 180px;
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s; }
+      -webkit-transition: transform 0.8s;
+      -moz-transition: transform 0.8s;
+      -o-transition: transform 0.8s;
+      transition: transform 0.8s; }
       body .menu-emplacement .text-menu .text-principal {
-        color: #22afcd;
-        font-family: 'leaguegothic-condensed', sans-serif;
-        font-weight: bold;
-        font-size: 16px; }
-      body .menu-emplacement .text-menu .text-soustitre {
-        font-size: 12px;
-        color: #681313; }
-    body .menu-emplacement .background-effect-circle {
-      width: 88px;
-      height: 88px;
-      border-radius: 50%;
-      position: absolute;
-      top: 0;
-      right: 0;
-      z-index: 0;
-      background: #f3f3f3;
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s; }
-    body .menu-emplacement .background-effect-rectangle {
-      position: absolute;
-      top: 0px;
-      right: 37px;
-      z-index: -1;
-      background: #f3f3f3;
-      height: 88px;
-      width: 0px;
-      text-align: right;
-      -webkit-transition: width 1s;
-      -moz-transition: width 1s;
-      -o-transition: width 1s;
-      transition: width 1s; }
+        color: #681313;
+        font-family: 'Ranchers', cursive;
+        font-weight: 800;
+        font-size: 50px; }
     body .menu-emplacement .round-circle {
       width: 88px;
       height: 88px;
@@ -142,79 +109,52 @@ body {
       top: 0;
       right: 0;
       z-index: 9;
-      background: #681313;
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s; }
+      background: #681313; }
     body .menu-emplacement:hover .menu-icon {
-      background-position: 0 -81px;
-      transform: translate(-200px, 0px);
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s; }
+      background-position: 0 -81px; }
     body .menu-emplacement:hover .arrow.menu {
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s;
-      transform: translate(-175px, 0px); }
+      -webkit-transition: transform 0.8s;
+      -moz-transition: transform 0.8s;
+      -o-transition: transform 0.8s;
+      transition: transform 0.8s;
+      transform: translate(-26px, 0px); }
     body .menu-emplacement:hover .text-wrapper {
-      width: 243px;
-      -webkit-transition: width 1s;
-      -moz-transition: width 1s;
-      -o-transition: width 1s;
-      transition: width 1s; }
+      width: 300px;
+      -webkit-transition: width 0.8s;
+      -moz-transition: width 0.8s;
+      -o-transition: width 0.8s;
+      transition: width 0.8s; }
     body .menu-emplacement:hover .text-menu {
-      -webkit-transition: transform 1s;
-      -moz-transition: transform 1s;
-      -o-transition: transform 1s;
-      transition: transform 1s;
-      transform: translate(300px, 0px); }
+      -webkit-transition: transform 0.8s;
+      -moz-transition: transform 0.8s;
+      -o-transition: transform 0.8s;
+      transition: transform 0.8s;
+      transform: translate(-110px, 0px); }
     body .menu-emplacement:hover .round-circle {
       -webkit-transition: transform 1s;
       -moz-transition: transform 1s;
       -o-transition: transform 1s;
-      transition: transform 1s;
-      transform: translate(-200px, 0px); }
-    body .menu-emplacement:hover .background-effect-rectangle {
-      -webkit-transition: width 1s;
-      -moz-transition: width 1s;
-      -o-transition: width 1s;
-      transition: width 1s;
-      width: 200px; }
+      transition: transform 1s; }
   body .active.menu-emplacement .menu-icon {
-    background-position: 0 -161px;
-    transform: translate(0px, 0px);
-    -webkit-transition: transform 0.5s;
-    -moz-transition: transform 0.5s;
-    -o-transition: transform 0.5s;
-    transition: transform 0.5s; }
+    background-position: 0 -160px; }
   body .active.menu-emplacement .arrow.menu {
-    -webkit-transition: transform 0.5s;
-    -moz-transition: transform 0.5s;
-    -o-transition: transform 0.5s;
-    transition: transform 0.5s;
+    -webkit-transition: transform 0.8s;
+    -moz-transition: transform 0.8s;
+    -o-transition: transform 0.8s;
+    transition: transform 0.8s;
     transform: translate(0px, 0px); }
   body .active.menu-emplacement .round-circle {
-    -webkit-transition: transform 0.5s;
-    -moz-transition: transform 0.5s;
-    -o-transition: transform 0.5s;
-    transition: transform 0.5s;
-    transform: translate(0px, 0px); }
-  body .active.menu-emplacement .background-effect-rectangle {
-    -webkit-transition: width 0.5s;
-    -moz-transition: width 0.5s;
-    -o-transition: width 0.5s;
-    transition: width 0.5s;
-    width: 0px; }
+    -webkit-transition: background 1s;
+    -moz-transition: background 1s;
+    -o-transition: background 1s;
+    transition: background 1s;
+    background: #fff; }
   body .active.menu-emplacement .text-wrapper {
     width: 0px;
-    -webkit-transition: width 0.5s;
-    -moz-transition: width 0.5s;
-    -o-transition: width 0.5s;
-    transition: width 0.5s; }
+    -webkit-transition: width 0.8s;
+    -moz-transition: width 0.8s;
+    -o-transition: width 0.8s;
+    transition: width 0.8s; }
   body .overlay.menu {
     background: #681313;
     opacity: 0.95;
@@ -223,17 +163,20 @@ body {
     right: 0px;
     height: 100%;
     width: 35%;
-    z-index: -1;
+    z-index: 0;
     display: none; }
     body .overlay.menu .overlay-content {
       margin-top: 160px; }
       body .overlay.menu .overlay-content a {
-        display: block;
+        display: inine-block;
         text-decoration: none;
         color: #fff;
         font-family: 'Ranchers', cursive;
         font-weight: 800;
         font-size: 60px;
-        line-height: 0.95; }
+        line-height: 0.95;
+        cursor: pointer; }
+        body .overlay.menu .overlay-content a:hover {
+          color: #22afcd; }
 
 /*# sourceMappingURL=style.css.map */
