--- a/portefolio/css/style.scss
+++ b/portefolio/css/style.scss
@@ -20,6 +20,20 @@ height: 1500px;
 	.engl {
 		display: none;
 	}
+	.language {
+		background: url('../img/icon-vache-lan.png');
+		width:80px;
+		height:80px;
+		display:block;
+		background-repeat: no-repeat;
+		&.fr{
+			background-position:0 -80px;	
+		}	
+		&.engl{
+			background-position:0 -0;	
+		}
+	}
+	
     .menu-emplacement {
 		@include position-fixed("20px", "20px", false, false);
 		height: 88px;
@@ -130,7 +144,7 @@ height: 1500px;
 			width: 80%;
 			padding: 0;
 			list-style-type:none;
-	
+		
 			a {
 				display: inline-block;	
 				text-decoration: none;
