--- a/portefolio/css/style.scss
+++ b/portefolio/css/style.scss
@@ -12,25 +12,29 @@
 ================================================== */
 body {
 height: 1500px;
-
+	.engl {
+		display: none;
+	}
     .name {
         color: red;
 	@include position-fixed("20px", false, false, "20px");
     }
-	.engl {
-		display: none;
-	}
-	.language {
-		background: url('../img/icon-vache-lan.png');
-		width:80px;
-		height:80px;
-		display:block;
-		background-repeat: no-repeat;
-		&.fr{
-			background-position:0 -80px;	
-		}	
-		&.engl{
-			background-position:0 -0;	
+	.wrapper-lang {	
+		height: 80px;
+		width: 80px;
+		overflow: hidden;
+		.language {
+			background: url('../img/icon-vache-lan.png');
+			width:80px;
+			height:80px;
+			display: block;
+			background-repeat: no-repeat;
+			&.fr{
+				background-position:0 -80px;	
+			}	
+			&.engl{
+				background-position:0 -0;	
+			}
 		}
 	}
 	
@@ -165,10 +169,14 @@ height: 1500px;
 				}
 			}
 		}
+		.menu-footer {
+			width: 80%;
+			margin: 0 auto;
+		}
 		.menu-search{
 			width: 80%;
 			position: relative;
-			margin: 60px auto 0;		
+			margin: 60px auto 60px;		
 		}
 		.menu-search-field {
 			background: none;
